[gd_scene load_steps=4 format=3 uid="uid://d4j3lbd6v0vvr"]

[ext_resource type="Script" uid="uid://md0aw3bu54w4" path="res://Scripts/player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://cdsvtd1wlu6cv" path="res://Assests/Sprites/SpaceBar.png" id="1_rpqav"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpqav"]
size = Vector2(76, 18)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kyqiw")

[node name="CharacterSprite" type="Sprite2D" parent="."]
scale = Vector2(0.025, 0.025)
texture = ExtResource("1_rpqav")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rpqav")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InputBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="HoldJumpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="InputBufferTimer" to="." method="_on_input_buffer_timer_timeout"]
[connection signal="timeout" from="HoldJumpTimer" to="." method="_on_hold_jump_timer_timeout"]
